<?xml version="1.0"?>
<package>
    <name>moveit_state_server</name>
    <version>0.1.0</version>
    <description>The moveit_tutorials package</description>
    <license>BSD</license>

    <author email="todo@mail.de">Todo</author>
    <maintainer email="todo@mail.de">Todo</maintainer>

    <buildtool_depend>catkin</buildtool_depend>


    <build_depend>moveit_core</build_depend>
    <build_depend>moveit_state_server_msgs</build_depend>
    <build_depend>moveit_ros_planning</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>
    <build_depend>roscpp</build_depend>


    <run_depend>roscpp</run_depend>
    <run_depend>moveit_core</run_depend>
    <run_depend>moveit_commander</run_depend>
    <run_depend>moveit_fake_controller_manager</run_depend>
    <run_depend>moveit_ros_planning_interface</run_depend>
    <run_depend>moveit_state_server_msgs</run_depend>
    <run_depend>moveit_ros_perception</run_depend>
    <run_depend>joint_state_publisher</run_depend>
    <run_depend>robot_state_publisher</run_depend>

</package>