<package format="2">
    <name>moveit_state_server_msgs</name>
    <version>0.0.0</version>
    <description>The moveit_state_server_msgs package</description>

    <maintainer email="aljoscha97@web.de">Aljoscha Schmidt</maintainer>


    <license>TODO</license>


    <author email="aljoscha97@web.de">Aljoscha Schmidt</author>



    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>actionlib_msgs</build_depend>

    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>

    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <test_depend>actionlib_msgs</test_depend>


</package>
